# aligned_box

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
