[package]
authors = ["Michael Lass <michael.lass@uni-paderborn.de>"]
categories = ["data-structures", "memory-management"]
description = "Traits and implementations for the allocation of aligned heap memory"
edition = "2018"
homepage = "https://github.com/michaellass/aligned_box/"
keywords = ["aligned", "alignment", "box", "heap", "memory"]
license = "MIT"
name = "aligned_box"
publish = ["crates-io"]
readme = "README.md"
repository = "https://github.com/michaellass/aligned_box.git"
version = "0.1.0"

[badges]
travis-ci = { repository = "michaellass/aligned_box", branch = "master" }

[dev-dependencies]
lazy_static = "^1.4"
